@@ -27,6 +27,8 @@ function phpCompatInfo_autoload($className)
     if ($classes === null) {
 
         $classes = array(
+            'PHP_CompatInfo_Filter'
+                => 'PHP/CompatInfo/Filter.php',
             'PHP_CompatInfo_CLI'
                 => 'PHP/CompatInfo/CLI.php',
             'PHP_CompatInfo_TokenParser'
