@@ -24,7 +24,7 @@ content of dictionary references.
   <active>yes</active>
  </contributor>
  <date>2012-10-03</date>
- <time>16:25:27</time>
+ <time>17:07:47</time>
  <version>
   <release>2.9.0</release>
   <api>2.9.0</api>
@@ -41,6 +41,7 @@ Additions and changes:
 - Reports refactoring (33 percent code reduced)
 - Source, Database and Reference reports
 will not be print anymore on standard output when --report-file option used
+- CAUTION: BC breaks with API 2.8.0 with the new filter system
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
@@ -596,6 +597,9 @@ Bug fixes:
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
      <file baseinstalldir="Bartlett" name="Exception.php" role="php">
+      <tasks:replace from="@package_version@" to="version" type="package-info" />
+     </file>
+     <file baseinstalldir="Bartlett" name="Filter.php" role="php">
       <tasks:replace from="@package_version@" to="version" type="package-info" />
      </file>
      <file baseinstalldir="Bartlett" name="Reference.php" role="php">
@@ -1330,6 +1334,7 @@ Additions and changes:
 - Reports refactoring (33 percent code reduced)
 - Source, Database and Reference reports
 will not be print anymore on standard output when --report-file option used
+- CAUTION: BC breaks with API 2.8.0 with the new filter system
 
 Bug fixes:
 - PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
