@@ -13,6 +13,7 @@ PHP_CompatInfo ChangeLog
 * Reports refactoring (33 percent code reduced)
 * Source, Database and Reference reports
 will not be print anymore on standard output when --report-file option used
+* CAUTION: BC breaks with API 2.8.0 with the new filter system
 
 .Bug fixes:
 * PHP 5.4 raises notice error (Array to string conversion) in file cache, while PHP 5.2 and 5.3 did not
